<resources>
    <string name="app_name">MyUCI</string>

    <!--MENU LABELS-->
    <string name="action_logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="action_favorite">Favorite Action</string>
    <string name="action_search">Search</string>
    <string name="action_label_upcoming_events">Upcoming Events</string>
    <string name="action_label_calendar">My Calendar</string>
    <string name="action_label_watch_later">Watch Later List</string>
    <string name="action_label_current_events">Current Events</string>

    <!--ACTIVITY TITLES-->
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_event_list">EventListActivity</string>
    <string name="title_activity_navigator">NavigatorActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_event_view">EventViewActivity</string>
    <string name="title_activity_krumbs">KrumbsActivity</string>
    <string name="title_activity_personal_list">PersonalListActivity</string>
    <string name="title_activity_watch_later_list">WatchLaterListActivity</string>
    <string name="title_activity_base">BaseActivity</string>

    <!--KRUMBS LABELS-->
    <string name="krumbs_button_label">Krumbs Capture</string>
    <string name="krumbssdk_app_id">zmmzAIzwM65XahnKb1lmD1ij7z4J2bToqRRIuGDH</string>
    <string name="krumbssdk_client_key">bJI7wx5HafWH9x6icjJ9RtMQEZf4XxpoOtX6TJwm</string>

    <!--LOGIN LABELS-->
    <string name="user_name">Username</string>
    <string name="login">Login</string>
    <string name="pass_word">Password</string>
    <string name="clear">Quit</string>
    <string name="attempts_left">Attempts Left: </string>

    <!--CATEGORY LABELS-->
    <string name="start_time_title">Start Time: </string>
    <string name="end_time_title">End Time: </string>

    <!--PLACEHOLDERS-->
    <string name="title_placeholder">Unknown Title</string>
    <string name="hoster_placeholder">No Host</string>
    <string name="start_time_placeholder">Start Time Placeholder</string>
    <string name="end_time_placeholder">TBA</string>
    <string name="location_placeholder">Location Placeholder</string>
    <string name="description_placeholder">No description provided.</string>
    <string name="link_placeholder">No link provided.</string>
    <string name="image_placeholder">No image provided.</string>
    <string name="krumbs_image_placeholder">No Krumbs Images Taken.</string>

    <!--BUTTON LABELS-->
    <string name="add_to_watch_later">Add to Watch Later</string>
    <string name="delete_from_watch_later">Remove from Watch Later</string>
    <string name="add_to_calendar">Add to Calendar</string>
    <string name="delete_from_calendar">Remove from Calendar</string>
    <string name="map_view">MapView</string>
    <string name="view_on_map">View On Map</string>
    <string name="view_event">View Full Event</string>
    <string name="krumbs_button_view_label">See Krumbs</string>


    <!--ACTION BAR TITLES-->
    <string name="watch_later_list_title">Watch Later List</string>
    <string name="calendar_list_title">Calendar List</string>
    <string name="title_activity_map_view">Map</string>
    <string name="label_activity_current_event">CurrentEventActivity</string>

    <!--Spinner-->
    <string name="spinner_title">Sort By:</string>
    <string-array name="sort">
        <item>default</item>
        <item>start time</item>
        <item>end time</item>
        <item>location</item>
    </string-array>
    <string name="title_activity_krumbs_list">KrumbsListActivity</string>

</resources>
