<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:paddingLeft="6dip"
        android:paddingTop="6dip"
        android:textColor="#008000"
        android:textSize="17sp"
        android:textStyle="bold"
        android:text="@string/title_placeholder"/>

    <TextView
        android:id="@+id/hoster"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:paddingLeft="6dip"
        android:paddingTop="6dip"
        android:textColor="#008000"
        android:textSize="17sp"
        android:textStyle="bold"
        android:text="@string/hoster_placeholder"/>

    <TextView
        android:id="@+id/start_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:paddingLeft="6dip"
        android:paddingTop="6dip"
        android:textColor="#008000"
        android:textSize="17sp"
        android:textStyle="bold"
        android:text="@string/start_time_placeholder"/>

    <TextView
        android:id="@+id/end_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:paddingLeft="6dip"
        android:paddingTop="6dip"
        android:textColor="#008000"
        android:textSize="17sp"
        android:textStyle="bold"
        android:text="@string/end_time_placeholder"/>


    <TextView
        android:id="@+id/location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:paddingLeft="6dip"
        android:paddingTop="6dip"
        android:textColor="#008000"
        android:textSize="17sp"
        android:textStyle="bold"
        android:text="@string/location_placeholder"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:paddingLeft="6dip"
        android:paddingTop="6dip"
        android:textColor="#008000"
        android:textSize="17sp"
        android:textStyle="bold"
        android:text = "@string/description_placeholder"
        android:ellipsize="end"
        android:maxLines="2"
        android:singleLine="false"/>


    <!--creates black line in between each list item-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#000"></LinearLayout>

</LinearLayout>
